--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ gap: 7rem;
     font-size: 18px;
     animation-name: text;
     animation-iteration-count: infinite;
-    animation-duration: 0.9s;
+    animation-duration: 1s;
 }
 
 @keyframes text{
@@ -64,7 +64,7 @@ gap: 7rem;
 .logo h1{
     animation-name: logo;
     animation-iteration-count: infinite;
-    animation-duration: 0.7s;
+    animation-duration: 1.5s;
 }
 
 @keyframes logo{
@@ -76,12 +76,71 @@ gap: 7rem;
     }
 }
 
+@media (max-width:420px){
+    .header{
+        height: 200px;
+    }
+    .menu ul{
+        display: block;
+    }
+    .menu a{
+        line-height: 30px;
+    }
+}
+
+
 .section{
     display: flex;
     justify-content: center;
 }
 
 .container img{
-    width: 700px;
+    width: 100%;
     border-radius: 10px;
+}
+
+.bluk {
+    height: 650px;
+    background-color: yellow;
+}
+.bluk1 {
+    margin-left: 600px;
+    width: 100px;
+    height: 100px;
+    background-color: rgb(51, 255, 0);
+
+    top: 0;
+    left: 0;
+    position: relative;
+
+    animation-name: mut;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+ 
+}
+
+@keyframes mut {
+    0% {
+        top: 0;left: 600;
+        background-color: rgb(255, 0, 0);
+        border-radius: 25px;
+    }
+    25% {
+        top: 0;left: 600px;
+        background-color: rgb(17, 0, 255);
+    }
+    50% {
+        top: 500px;left: 600px;
+        background-color: rgb(255, 0, 200);
+        
+    }
+    75% {
+        top: 500px;left: 0;
+        background-color: rgb(19, 19, 19);
+        border-radius: 95px;
+    }
+}
+
+@media (max-width:420px){
+    
 }
